<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InsurePlus</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nic">NIC</string>
    <string name="password">Password</string>
    <string name="strNic">NIC</string>
    <string name="button">Button</string>
    <string name="foget_password">Foget Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_owner">Welcome, Owner</string>
    <string name="vehicles">VEHICLES</string>
    <string name="claim">CLAIM</string>
    <string name="profile">PROFILE</string>
    <string name="history">HISTORY</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="claim_to_insurance_comapny">Claim to Insurance Comapny</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="damage_type">Damage Type</string>
    <string name="claim_now">Claim Now</string>
    <string name="nearest_city">Nearest City</string>
    <string name="e_g_kuliyapitiya">E.g Kuliyapitiya</string>
    <string name="description">Description</string>
    <string name="e_g_my_vehicle_met_with_an_accident_near_kuliyapitiya_area_the_damage_is_normal_please_send_me_an_insurance_agent">E.g My vehicle  met with an accident near kuliyapitiya area. The damage is normal. Please send me an insurance agent</string>
    <string name="evidence_photo">Evidence Photo</string>
    <string name="change">Change</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="attach_video">Attach Video</string>
    <string name="title_activity_claim_progress">ClaimProgressActivity</string>
    <string name="upload_notice">Note : Make sure you are around the accident, because we\'re getting current location of your mobile.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    
</resources>
