<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical"
    tools:context="com.duract.insureplus.HomeActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.

    -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.

    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#aaa"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_owner"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <LinearLayout
            android:id="@+id/layClaim"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#bbb"
            android:gravity="start"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btnClaim"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/claim_to_insurance_comapny"
                android:linksClickable="true"
                android:text="@string/claim"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="#fff"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layVehicles"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#bbb"
            android:gravity="end"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btnVehicle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/vehicles"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#bbb"
            android:gravity="start"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btnHistory"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/history"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#bbb"
            android:gravity="end"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btnProfile"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="#aaa"
            android:gravity="bottom" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:freezesText="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
