<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    tools:context="com.duract.insureplus.ClaimProgressActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.


    -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.


    -->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_bar"
        android:gravity="center_horizontal"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnClaimNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/claim_now" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:background="#ee0"
        android:padding="10dp"
        android:text="@string/upload_notice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_default" />

    <LinearLayout
        android:id="@+id/linerLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="15dp" >

        <VideoView
            android:id="@+id/videoViewEvi"
            android:layout_width="match_parent"
            android:layout_height="181dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewNote"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewClaimStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_notice" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:progress="0" />
    </LinearLayout>

</RelativeLayout>